enhance unit tests and fix some bugs

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,8 @@
 [webservice]
-  port: "8080"
+  port: 8080
 [logger]
   log-file: "cme.log"
   log-level: "debug"
+[Agent]
+  windows-root-folder: "C:\test"
 
