support gorm foreignKey between host and directory

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 [logger]
   audit-log-file: "cme-audit.log"
   log-file: "cme.log"
-  log-level: "debug"
+  log-level: "trace"
 [Agent]
   windows-root-folder: "C:\test"
 
